@startuml

title __VEHICLE's Class Diagram__\n

  package com.company.model.vehicle {
    interface IVehicleBuilder {
        {abstract} + position()
        {abstract} + nrDoors()
        {abstract} + enginePower()
        {abstract} + modelName()
        {abstract} + color()
        {abstract} + build()
    }
  }
  

  package com.company.model.vehicle {
    abstract class Vehicle {
        - currentSpeed : double
        - nrDoors : int
        - enginePower : double
        - modelName : String
        - color : Color
        + Vehicle()
        + getNrDoors()
        + getModelName()
        + getCurrentSpeed()
        + getEnginePower()
        + getColor()
        + setColor()
        {abstract} + speedFactor()
        + startEngine()
        + stopEngine()
        + move()
        + turnRight()
        + turnLeft()
        - incrementSpeed()
        - decrementSpeed()
        + gas()
        + brake()
        + setCurrentSpeed()
        + getPosition()
        + setPosition()
    }
  }
  

  package com.company.model.vehicle {
    abstract class VehicleBuilder {
        - currentSpeed : double
        - nrDoors : int
        - enginePower : double
        - modelName : String
        - color : Color
        + position()
        + nrDoors()
        + enginePower()
        + modelName()
        + color()
    }
  }
  

  Vehicle -up-|> IMovable
  Vehicle -up-|> IStorable
  Vehicle -up-|> ITransportable
  Vehicle o-- Position : position
  VehicleBuilder -up-|> IVehicleBuilder
  VehicleBuilder o-- Position : position


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
